samples/_failures_safe/1761250717_3a428f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec09dabd.c: In function ‘main’:
./samples/SAFE/__tmp_ec09dabd.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_ec09dabd.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec09dabd.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec09dabd.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec09dabd.c:159:21: error: expected declaration or statement at end of input
